--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.12",
-    "gsap": "^3.9.1"
+    "gsap": "^3.9.1",
+    "luxon": "^3.3.0"
   }
 }
